--- a/css/custom.css
+++ b/css/custom.css
@@ -114,12 +114,12 @@ font-size: 90%
             Header Area
 ============================================================= */
 .logo {
-background: url("../images/logo.jpg") no-repeat scroll 0 0 transparent;
-height: 50px;
+background: url("../images/logo-en.png") no-repeat scroll 0 0 transparent;
+height: 40px;
 margin: 14px 15px 11px 2px !important;
 padding: 0;
 text-indent: -9999px;
-width: 400px;
+width: 109px;
 }
 @media (min-width: 320px) and (max-width: 769px) {
 .logo {
