--- a/css/ar.css
+++ b/css/ar.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css);
 
-.content-en, p.content-en {
+p.content-en {
 	text-align: left;
 } 
 
