--- a/css/custom.css
+++ b/css/custom.css
@@ -2043,10 +2043,10 @@ blockquote {
 	border-left: 0px;
 }
 
-.cbp_tmtimeline {
+/*.cbp_tmtimeline {
 	width: 75%;
 }
-
+*/
 ul.my-list {
 	padding-top: 20px;
 }
