--- a/css/custom.css
+++ b/css/custom.css
@@ -2099,7 +2099,7 @@ ul.my-list li:before {
 }
 
 #bg-1 {
-	background: url('../images/oldmap.jpg') no-repeat  center fixed; 
+	background: url('../images/panorama-dalieh.jpg') no-repeat  center fixed; 
     -webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
