--- a/css/custom.css
+++ b/css/custom.css
@@ -2108,7 +2108,7 @@ ul.my-list li:before {
 }
 
 #bg-2 {
-	background: url('../images/competition.jpg') no-repeat center  fixed; 
+	background: url('../images/panorama-2.jpg') no-repeat center  fixed; 
     -webkit-background-size: contain;
   	-moz-background-size: contain;
   	-o-background-size: contain;
