--- a/css/timeline.css
+++ b/css/timeline.css
@@ -23,7 +23,7 @@
 	top: 0;
 	bottom: 0;
 	width: 10px;
-	background: #000;
+	background: #ccc;
 	left: 20%;
 	margin-left: -10px;
 }
@@ -43,37 +43,37 @@
 
 .cbp_tmtimeline > li .cbp_tmtime span:first-child {
 	font-size: 0.9em;
-	color: #000;
+	color: #ccc;
 }
 
 .cbp_tmtimeline > li .cbp_tmtime span:last-child {
 	font-size: 1.5em;
-	color: #000;
+	color: #ccc;
 }
 
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmtime span:last-child {
-	color: #000;
+	color: #ccc;
 }
 
 /* Right content */
 .cbp_tmtimeline > li .cbp_tmlabel {
 	margin: 0 0 15px 25%;
-	background: #000;
-	color: #fff;
+	background: #ccc;
+	color: #000;
 	padding: 2em;
 	position: relative;
 	font-size: 1.1vw;
 }
 
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel {
-	background: #000;
+	background: #ccc;
 }
 
 .cbp_tmtimeline > li .cbp_tmlabel h2 { 
 	margin-top: 0px;
 	padding: 0 0 10px 0;
 	border-bottom: 1px solid rgba(255,255,255,0.4);
-	color: #fff;
+	color: #000;
 }
 
 /* The triangle */
@@ -85,13 +85,13 @@
 	width: 0;
 	position: absolute;
 	pointer-events: none;
-	border-right-color: #000;
+	border-right-color: #ccc;
 	border-width: 10px;
 	top: 10px;
 }
 
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel:after {
-	border-right-color: #000;
+	border-right-color: #ccc;
 }
 
 /* The icons */
@@ -107,9 +107,9 @@
 	-webkit-font-smoothing: antialiased;
 	position: absolute;
 	color: #fff;
-	background: #000;
+	background: #ccc;
 	border-radius: 50%;
-	box-shadow: 0 0 0 8px #000;
+	box-shadow: 0 0 0 8px #ccc;
 	text-align: center;
 	left: 20%;
 	top: 0;
