--- a/css/custom.css
+++ b/css/custom.css
@@ -2135,6 +2135,10 @@ ul.my-list li:before {
 	padding-right: 20px;
 }
 
+.fa-file-archive-o, .fa-file-pdf-o {
+	padding-right: 10px;
+}
+
   /* Small Devices, Tablets */
     @media only screen and (min-width : 768px) {
     		.cbp_tmtimeline , table {
