competition brief header

--- a/css/custom.css
+++ b/css/custom.css
@@ -2151,4 +2151,9 @@ i.content-en.fa.fa-file-pdf-o {
     		}
     }
 
+#competition-brief {
+	font-size: 18px;
+	padding-bottom: 10px;
+	font-weight: bolder;
+}
  
